서비스로직 및 프론트 추가, 수정