@@ -12,6 +12,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -32,28 +33,45 @@ public class RoomService {
 
         // 방 상세화면
         public RoomDetailDTO detailRoom(Long roomId) {
-                Room room = roomRepository.findRoomWithReviewsAndBookings(roomId); // 엔터티
-                List<BookingDateDTO> bookings = room.getBookings()
-                                .stream()
-                                .map(BookingDateDTO::fromEntity)
-                                .toList();
 
-                List<RoomReviewDTO> reviewDTOs = room.getReviews()
-                                .stream()
+                // 1. 리뷰만 조회
+                Room roomWithReviews = roomRepository.findRoomWithReviews(roomId);
+                if (roomWithReviews == null) {
+                        throw new IllegalArgumentException("존재하지 않는 방입니다.");
+                }
+
+                // 2. 예약만 조회
+                Room roomWithBookings = roomRepository.findRoomWithBookings(roomId);
+                if (roomWithBookings == null) {
+                        throw new IllegalArgumentException("존재하지 않는 방입니다.");
+                }
+
+                // 3. 리뷰 DTO 변환
+                List<RoomReviewDTO> reviews = roomWithReviews.getReviews().stream()
                                 .map(rr -> RoomReviewDTO.builder()
                                                 .id(rr.getId())
                                                 .content(rr.getContent())
                                                 .username(rr.getUser().getUsername())
                                                 .createdAt(rr.getCreatedAt())
                                                 .build())
-                                .toList(); // 엔터티 안에 리스트로있는 리뷰를 스트림을 이용해서 dto로 변환
+                                .collect(Collectors.toList());
 
+                // 4. 예약 DTO 변환
+                List<BookingDateDTO> bookings = roomWithBookings.getBookings().stream()
+                                .map(BookingDateDTO::fromEntity)
+                                .collect(Collectors.toList());
+
+                // 5. Room 상태 DTO용 변환
+                String roomStatus = roomWithBookings.getRoomStatus().name();
+
+                // 6. DTO 반환
                 return RoomDetailDTO.builder()
-                                .id(room.getId())
-                                .roomName(room.getRoomName())
-                                .price(room.getPrice())
-                                .reviews(reviewDTOs)
+                                .id(roomWithReviews.getId()) // 리뷰, 예약 둘 다 같은 RoomId임
+                                .roomName(roomWithReviews.getRoomName())
+                                .price(roomWithReviews.getPrice())
+                                .reviews(reviews)
                                 .bookings(bookings)
+                                .roomStatus(roomStatus)
                                 .build();
         }
 
